all the new textures ,,